# ExoCubed-Interpolator

./: .gitignore  .gitmodules  README.md  W92_single.nc  exo_3d_object.py  exo_interpolator.py  python_sanity_check.py  setup.py  test.py
examples/: general_animator.py
interpolator/: CMakeLists.txt  interp_forward.cu  interp_forward.cuh  interpolator.cu  interpolator.cuh  interpolator_forw.cu  project.toml  python_bindings.cpp  setup.py  tensor_wrapper.hpp  test.cu  test_interpolator.py
interpolator.egg-info/: PKG-INFO  SOURCES.txt
other_tools/: calculate_avg.py  calculate_psi.py  height_to_sigma.py  vorticity.py
